# urban-resilience-after-climate-shocks

./: .buildinfo  .pre-commit-config.yaml  README.html  README.md  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: project_setup.yaml
.github/workflows/: gh-pages.yml
_sources/: README.md
_sources/notebooks/activity/: README.md
docs/: _config.yml  _toc.yml  bibliography.bib  data.html  data.md  limitations.md
notebooks/activity/: README.html  README.md
notebooks/mobility/: README.md
