[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "urban-resilience-after-climate-shocks"
description = "Monitoring Near-Time Changes in Urban Space Usage after Climate Shocks"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Development Data Group", email = "datalab@worldbank.org" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.9"
dependencies = [
	"fiona==1.10.0",
	"numpy<2",
	"pandas",
]
[project.optional-dependencies]
dev = [
	"jupyterlab",
	"watermark",
]
docs = [
	"docutils==0.17.1",	# https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=1,<2",
]

[project.urls]
"Homepage" = "https://github.com/worldbank/urban-resilience-after-climate-shocks"
"Bug Reports" = "https://github.com/worldbank/urban-resilience-after-climate-shocks/issues"
"Source" = "https://github.com/worldbank/urban-resilience-after-climate-shocks"

[tool.codespell]
skip = 'docs/_build,docs/references.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,"

[tool.hatch.build.targets.wheel]
packages = ["src/urban_resilience_after_climate_shocks"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"